[package]
name = "yaca"
version = "0.1.0"
authors = ["Lukasz Pawelczyk <havner@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Bindings for the YACA library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
