[package]
name = "yaca"
version = "0.1.4"
authors = ["Lukasz Pawelczyk <havner@gmail.com>"]
edition = "2018"
description = "Bindings for the YACA library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["crypto", "openssl", "simple"]
categories = ["api-bindings", "cryptography"]
documentation = "https://docs.rs/yaca/"
repository = "https://github.com/Havner/yaca-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
num-integer = "0.1"

[features]
static = []
